# SG-FIlm-Calender

./: README.md  pyproject.toml
.github/workflows/: daily-scrape.yml
src/: calendar_sync.py  main.py  scraper.py  validate.py
